[gd_scene load_steps=13 format=2]

[ext_resource path="res://nodos/UI/ChapterSelect/ChapterSelect.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/cap2.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/capitulos_.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/cap1.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/atras.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/Menu.svg" type="Texture" id=6]
[ext_resource path="res://nodos/UI/ChapterSelect/Capitulo2.gd" type="Script" id=7]
[ext_resource path="res://nodos/UI/ChapterSelect/Atras.gd" type="Script" id=8]
[ext_resource path="res://nodos/UI/ChapterSelect/Capitulo1.gd" type="Script" id=9]
[ext_resource path="res://nodos/UI/ChapterSelect/Capitulo3.gd" type="Script" id=10]
[ext_resource path="res://Assets/UI/UI_New/cap3.png" type="Texture" id=11]

[sub_resource type="ShaderMaterial" id=1]

[node name="ChapterSelect" type="Container"]
material = SubResource( 1 )
margin_left = 6.46173
margin_right = 1372.46
margin_bottom = 768.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Sprite" parent="."]
position = Vector2( -34.5244, -27.6156 )
scale = Vector2( 0.776449, 0.821248 )
z_index = -1
texture = ExtResource( 6 )
centered = false
flip_h = true

[node name="Capitulo1" type="TextureRect" parent="."]
margin_left = 100.0
margin_top = 200.0
margin_right = 1225.0
margin_bottom = 808.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 4 )
stretch_mode = 3
script = ExtResource( 9 )

[node name="Capitulo2" type="TextureRect" parent="."]
margin_left = 100.0
margin_top = 270.0
margin_right = 1225.0
margin_bottom = 878.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )
stretch_mode = 3
script = ExtResource( 7 )

[node name="Capitulo3" type="TextureRect" parent="."]
anchor_right = 10.0
margin_left = 100.0
margin_top = 340.0
margin_right = -12960.0
margin_bottom = 545.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 11 )
stretch_mode = 3
script = ExtResource( 10 )

[node name="Atras" type="TextureRect" parent="."]
margin_left = 100.0
margin_top = 425.0
margin_right = 1225.0
margin_bottom = 1033.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 5 )
stretch_mode = 3
script = ExtResource( 8 )

[node name="Logo" type="TextureRect" parent="."]
margin_top = 10.0
margin_right = 1125.0
margin_bottom = 618.0
texture = ExtResource( 3 )
stretch_mode = 3
